--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "author": "Maxence POUTORD <maxence.poutord@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maxpou/react-tictactoe.git"
+  },
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
