:white_check_mark: setup enzyme + add tests

--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "type": "git",
     "url": "git+https://github.com/maxpou/react-tictactoe.git"
   },
-  "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -19,8 +14,16 @@
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
+  "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-scripts": "1.0.14"
+  },
   "devDependencies": {
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint-config-standard-jsx": "^4.0.2",
+    "react-test-renderer": "^16.0.0",
     "standard": "^10.0.3"
   }
 }
