--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
+    "mobx-react-devtools": "^4.2.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
