--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "flow": "flow",
     "lint": "eslint src"
   },
   "dependencies": {
+    "flow-bin": "^0.56.0",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
     "mobx-react-devtools": "^4.2.15",
